2000-09-20  Bruce Guenter  <bruce@bruce-guenter.dyndns.org>

	* relay-ctrl-age.c (parent): Show the rules file before the
	generated rules, to allow the rules file to override generated
	rules.

	* relay-ctrl-allow.c: Removed the "touch" function from this
	program, and moved it into relay-ctrl-age instead, which already
	modifies files in the IP spool.

	* relay-ctrl-age.c: Overhauled to read most site-specific options
	out of a config file.

2000-09-19  Bruce Guenter  <bruce@bruce-guenter.dyndns.org>

	* relay-ctrl-age.c (read_config): Removed the previous limited
	"fixup" control file, and replaced it with a "relayclient"
	control.

2000-07-25  Bruce Guenter  <bruce@bruce-guenter.dyndns.org>

	* relay-ctrl-allow.c (validate): Removed the checks for standard
	input and output being pipes, and added a check for the "::ffff:"
	IPv6 address prefix added by couriertcpd.

2000-06-14  Bruce Guenter  <bruce@bruce-guenter.dyndns.org>

	* Released version 2.0
	
	* relay-ctrl-allow.c (main): Require that UID and GID are
	non-zero.  
	(main): Handle a "--courier-imap" option to make it act like a
	trivial Courier IMAP authentication module.

2000-03-15  Bruce Guenter  <bruce@bruce-guenter.dyndns.org>

	* Released version 1.4
	
	* relay-ctrl-age.c (child): Added a "umask" call to force tcprules
	to create a world-readable CDB file.

2000-02-03  Bruce Guenter  <bruce@bruce-guenter.dyndns.org>

	* relay-ctrl-age.c: Some systems need sys/types.h to be included
	before dirent.h, so rearrange the include list.

	* relay-ctrl-allow.c (run_age_cmd): Fixed typo in execution of
	AGE_CMD that caused problems on BSDI.

1999-09-29  Bruce Guenter  <bguenter@mikhail.qcc.sk.ca>

	* relay-ctrl-age.c (age_addresses): Added code to setup a fixup
	address in the relayclient string.
	(read_fixup): Read in a "fixup" string to add to the relayclient
	string output.
	Moved all of the hard-coded file names into the defines.h file.
