@@ -1,3 +1,9 @@
+2000-10-04  Bruce Guenter  <bruce@bruce-guenter.dyndns.org>
+
+	* relay-ctrl-age.c: Force an unlink of the temporary CDB file
+	after waiting for the exit of tcprules, in case the rename in
+	tcprules fails and leaves a temporary file behind.
+
 2000-09-20  Bruce Guenter  <bruce@bruce-guenter.dyndns.org>
 
 	* relay-ctrl-age.c (parent): Show the rules file before the
